--- a/_posts/2024-01-15-binius.md
+++ b/_posts/2024-01-15-binius.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Binius: a Hardware-Optimized SNARK on towers of binary fields"
+title: "Binius: Hardware-Optimized SNARK on towers of binary fields"
 date: 2024-01-15
 ---
 
